Quick fix for weird layout issues when scrolling with sidebar open

--- a/less/base.less
+++ b/less/base.less
@@ -15,7 +15,6 @@ width : device-width; }
 width : device-width; }
 
 html {
--webkit-overflow-scrolling : touch;
 -webkit-text-size-adjust : 100%;
 -ms-text-size-adjust : 100%; }
 
@@ -138,7 +137,6 @@ hr {
 }
 
 body.reveal-sidebar {
-    width: 100%;
     overflow: hidden;
 
     .site-header {
@@ -166,7 +164,7 @@ body.reveal-sidebar {
     font-weight: 400;
     color: white;
     text-shadow: 0 1px 1px fade(black, 50%);
-    margin: 0 0 2em;
+    //margin: 0 0 2em;
     background-color: #444;
 
     position: fixed;
